<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirdBirdBird</string>

    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_compose">Compose</string>
    <string name="action_about">About</string>
    <string name="action_me">Me</string>

    <string name="label_login">Log in with Twitter</string>
    <string name="label_tweet">Tweet</string>

    <string name="tab_home">Home</string>
    <string name="tab_mentions">Mentions</string>

    <string name="title_stream">BirdBirdBird Stream</string>

    <string name="title_tweet">Compose Tweet</string>
    <string name="title_profile">View Profile</string>

    <string name="hint_tweet_text">
      What\'s happening?
    </string>

    <string name="eg_name">Bill Shakespeare</string>
    <string name="eg_screen_name">WilliamS</string>
    <string name="eg_tweet_text">
      When birds do sing, hey ding a ding, ding. 
      Sweet lovers love the spring.
    </string>
    <string name="eg_tweet_age">415y</string>
    <string name="eg_retweet_count">23</string>
    <string name="eg_favorite_count">238</string>
    <string name="eg_tag_line">Idiomatic, I am!</string>
    <string name="eg_location">London, England</string>

    <string name="title_statuses_count">Tweets</string>
    <string name="title_friends_count">Following</string>
    <string name="title_followers_count">Followers</string>
    <string name="title_favourites_count">Favorites</string>

</resources>
