<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

  <ImageView
     android:id="@+id/imgProfile"
     android:layout_width="80dp"
     android:layout_height="80dp"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:src="@drawable/profile_none"
     />

  <TextView
     android:id="@+id/tvName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/eg_name"
     android:layout_toRightOf="@id/imgProfile"
     android:layout_alignParentTop="true"
     android:typeface="sans"
     android:textStyle="bold"
     android:textSize="20sp"
     android:textColor="@color/black"
     />

  <TextView
     android:id="@+id/tvScreenName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/eg_screen_name"
     android:layout_toRightOf="@id/tvName"
     android:layout_alignParentTop="true"
     android:typeface="sans"
     android:textSize="16sp"
     android:textColor="@color/grey"
     />

  <TextView
     android:id="@+id/tvTweetAge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/eg_tweet_age"
     android:layout_toRightOf="@id/tvName"
     android:layout_alignParentTop="true"
     android:typeface="sans"
     android:textSize="16sp"
     android:textColor="@color/grey"
     />

  <TextView
     android:id="@+id/tvTweetText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/eg_tweet_text"
     android:layout_toRightOf="@id/imgProfile"
     android:layout_below="@id/tvScreenName"
     android:typeface="sans"
     android:textSize="sp"
     android:textColor="#888"
    />

  <LinearLayout
     android:id="@+id/llTweetActions"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_toRightOf="@id/imgProfile"
     android:layout_alignParentBottom="true"
     android:layout_below="@id/tvTweetText"
     android:orientation="horizontal"
     >

    <ImageButton
       android:id="@+id/btnReply"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left"
       android:layout_weight="1"
       android:src="@drawable/reply_tiny"
       />

    <ImageButton
       android:id="@+id/btnRetweet"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="right"
       android:layout_weight="2"
       android:src="@drawable/retweet_tiny"
       />

    <TextView
       android:id="@+id/tvRetweetCount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left"
       android:layout_weight="1"
       android:text="@string/eg_retweet_count"
       />

    <ImageButton
       android:id="@+id/btnFavorite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="right"
       android:layout_weight="2"
       android:src="@drawable/favorite_tiny"
       />

    <TextView
       android:id="@+id/tvFavoriteCount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left"
       android:layout_weight="1"
       android:text="@string/eg_favorite_count"
       />

    <ImageButton
       android:id="@+id/btnFollow"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="right"
       android:layout_weight="2"
       android:src="@drawable/follow_tiny"
       />

  </LinearLayout>
</RelativeLayout>

