<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/off_white"
    >

  <ImageView
     android:id="@+id/imgProfile"
     android:layout_width="64dp"
     android:layout_height="64dp"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="8dp"
     />

  <TextView
     android:id="@+id/tvName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/eg_name"
     android:layout_toRightOf="@id/imgProfile"
     android:layout_alignParentTop="true"
     android:layout_marginTop="8dp"
     android:typeface="sans"
     android:textStyle="bold"
     android:textSize="12sp"
     android:textColor="@color/black"
     />

  <TextView
     android:id="@+id/tvScreenName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/eg_screen_name"
     android:layout_toRightOf="@id/imgProfile"
     android:layout_below="@id/tvName"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="8dp"
     android:typeface="sans"
     android:textSize="10sp"
     android:textColor="@color/grey"
     />

  <Button
     android:id="@+id/btnTweet"
     android:layout_width="wrap_content"
     android:layout_height="40dp"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:layout_marginTop="8dp"
     android:layout_marginRight="8dp"
     android:text="@string/label_tweet"
     />

  <EditText
     android:id="@+id/etTweetText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:hint="@string/hint_tweet_text"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/imgProfile"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginTop="16dp"
     android:typeface="sans"
     android:textSize="14sp"
     android:textColor="@color/grey" 
     />

  <TextView
     android:id="@+id/tvCharsLeft"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_below="@id/etTweetText"
     android:layout_marginTop="16dp"
     android:layout_marginRight="16dp"
     android:text="140"
     android:typeface="sans"
     android:textSize="10sp"
     android:textColor="@color/grey"
     />

</RelativeLayout>
