<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/llProfile"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/white"
   android:orientation="vertical"
   >

  <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >

    <ImageView
       android:id="@+id/imgBanner"
       android:layout_width="fill_parent"
       android:layout_height="160dp"
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:background="@color/light_blue"
       android:scaleType="centerCrop"
       />

    <ImageView
       android:id="@+id/imgProfilePicture"
       android:layout_width="64dp"
       android:layout_height="64dp"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="16dp"
       android:layout_marginLeft="8dp"
       android:padding="4dp"
       android:background="@color/white"
       />

    <LinearLayout
       android:id="@+id/llProfileNameEtc"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_below="@id/imgProfilePicture"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="4dp"
       >

       <TextView
          android:id="@+id/tvProfileName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/eg_name"
          android:typeface="sans"
          android:textStyle="bold"
          android:textSize="14sp"
          android:textColor="@color/white"
          />

       <TextView
          android:id="@+id/tvProfileScreenName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/eg_screen_name"
          android:layout_marginLeft="4dp"
          android:typeface="sans"
          android:textSize="12sp"
          android:textColor="@color/white"
          />
    </LinearLayout>

    <TextView
       android:id="@+id/tvProfileTagLine"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/eg_tag_line"
       android:layout_below="@id/llProfileNameEtc"
       android:layout_marginTop="4dp"
       android:layout_marginLeft="4dp"
       android:layout_marginRight="4dp"
       android:layout_centerHorizontal="true"
       android:typeface="sans"
       android:textSize="12sp"
       android:textColor="@color/white"
       />

    <TextView
       android:id="@+id/tvLocation"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/eg_location"
       android:layout_below="@id/tvProfileTagLine"
       android:layout_marginTop="4dp"
       android:layout_marginLeft="4dp"
       android:layout_marginRight="4dp"
       android:layout_centerHorizontal="true"
       android:typeface="sans"
       android:textSize="10sp"
       android:textColor="@color/white"
       />

    <TableLayout
       android:id="@+id/tlStats"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/imgBanner"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_centerHorizontal="true"
       >

      <TableRow
         android:layout_gravity="center_horizontal"
         >
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_weight="20"
           android:text="@string/title_statuses_count"
           android:typeface="sans"
           android:textSize="8sp"
           android:textAllCaps="true"
           android:textColor="@color/grey"
           />
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:text="@string/title_friends_count"
           android:typeface="sans"
           android:textSize="8sp"
           android:textAllCaps="true"
           android:textColor="@color/grey"
           />
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:text="@string/title_followers_count"
           android:typeface="sans"
           android:textSize="8sp"
           android:textAllCaps="true"
           android:textColor="@color/grey"
           />
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:text="@string/title_favourites_count"
           android:typeface="sans"
           android:textSize="8sp"
           android:textAllCaps="true"
           android:textColor="@color/grey"
           />
      </TableRow>
         
      <TableRow
         android:layout_gravity="center_horizontal"
         >
        <TextView
           android:id="@+id/tvStatusesCount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:typeface="sans"
           android:textSize="12sp"
           android:textColor="@color/black"
           />
        <TextView
           android:id="@+id/tvFriendsCount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:typeface="sans"
           android:textSize="12sp"
           android:textColor="@color/light_blue"
           />
        <TextView
           android:id="@+id/tvFollowersCount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:typeface="sans"
           android:textSize="12sp"
           android:textColor="@color/light_blue"
           />
        <TextView
           android:id="@+id/tvFavouritesCount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="20"
           android:typeface="sans"
           android:textSize="12sp"
           android:textColor="@color/light_blue"
           />
      </TableRow>
    </TableLayout>
  </RelativeLayout>

  <FrameLayout
     android:id="@+id/flStream"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     />

</LinearLayout>
